add confirm delete, add link to url

--- a/src/app/awesome-list/awesome-list.component.html
+++ b/src/app/awesome-list/awesome-list.component.html
@@ -11,9 +11,8 @@
     <tbody>
       <tr *ngFor="let awesome of awesomes | async">
         <td>{{awesome.tag}}</td>
-        <td>{{awesome.url}}</td>
+        <td><a [routerLink]="['/awesomes/update',awesome.id ]">{{awesome.url}}</a></td>
         <td>{{awesome.descriptions}}</td>
-        <td><button class="btn btn-primary" [routerLink]="['/awesomes/update',awesome.id ]">Update</button></td>
       </tr>
     </tbody>
   </table>
