--- a/src/app/awesome-list/awesome-list.component.html
+++ b/src/app/awesome-list/awesome-list.component.html
@@ -1,4 +1,5 @@
 <h1>My Awesome List</h1>
+<button class="btn btn-success mt-3 mb-3" [routerLink]="['/awesomes/add']">Add awesome</button>
 <table class="table">
     <thead>
       <tr>
@@ -11,8 +12,9 @@
     <tbody>
       <tr *ngFor="let awesome of awesomes | async">
         <td>{{awesome.tag}}</td>
-        <td><a [routerLink]="['/awesomes/update',awesome.id ]">{{awesome.url}}</a></td>
+        <td><a >{{awesome.url}}</a></td>
         <td>{{awesome.descriptions}}</td>
+        <td><button class="btn btn-primary" [routerLink]="['/awesomes/update',awesome.id ]">Update</button></td>
       </tr>
     </tbody>
   </table>
