--- a/src/app/awesome-update/awesome-update.component.html
+++ b/src/app/awesome-update/awesome-update.component.html
@@ -13,13 +13,10 @@
         <textarea formControlName="descriptions" class="form-control" placeholder="awesome!"></textarea>
       </div>
       <div class="row">
-          <div class="col-md-3">
+          <div class="col s6">
         <button class="btn btn-primary">Submit</button>
         </div>
-        <div class="col-md-3">
-        <div class="btn btn-secondary" (click)="cancel()">Cancel</div>
-    </div>
-        <div class="col-md-6">
+        <div class="well pull-right">
         <button class="btn btn-danger" (click)="delete()">Remove</button>
     </div>
       </div>
